src/MxParser.java
// Generated from D:/compiler/untitled16/src\Mx.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, Comment=20, WS=21, True__=22, False__=23, Op1=24, 
		Op2=25, Shlr=26, RelatOp1=27, RelatOp2=28, LogicOp=29, Bool__=30, Int__=31, 
		String__=32, Null__=33, Void__=34, For__=35, If__=36, While__=37, Break__=38, 
		Continue__=39, Return__=40, New__=41, Class__=42, This__=43, Else__=44, 
		Int_=45, Var=46, Digits=47, NL=48, String_=49;
	public static final int
		RULE_mx = 0, RULE_outfit = 1, RULE_class_ = 2, RULE_func = 3, RULE_self_func = 4, 
		RULE_stat = 5, RULE_singstat = 6, RULE_for_expr_in_cir = 7, RULE_type_and_var = 8, 
		RULE_type_ = 9, RULE_expr = 10, RULE_var_ = 11, RULE_bool_ = 12, RULE_string_ = 13, 
		RULE_int_ = 14, RULE_null__ = 15, RULE_void__ = 16, RULE_int__ = 17, RULE_string__ = 18, 
		RULE_bool__ = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"mx", "outfit", "class_", "func", "self_func", "stat", "singstat", "for_expr_in_cir", 
			"type_and_var", "type_", "expr", "var_", "bool_", "string_", "int_", 
			"null__", "void__", "int__", "string__", "bool__"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'{'", "'}'", "'('", "','", "')'", "'['", "']'", "'.'", 
			"'++'", "'--'", "'!'", "'~'", "'&'", "'^'", "'|'", "'&&'", "'||'", "'='", 
			null, null, null, null, null, null, null, null, null, null, "'bool'", 
			"'int'", "'string'", "'null'", "'void'", "'for'", "'if'", "'while'", 
			"'break'", "'continue'", "'return'", "'new'", "'class'", "'this'", "'else'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "Comment", "WS", "True__", 
			"False__", "Op1", "Op2", "Shlr", "RelatOp1", "RelatOp2", "LogicOp", "Bool__", 
			"Int__", "String__", "Null__", "Void__", "For__", "If__", "While__", 
			"Break__", "Continue__", "Return__", "New__", "Class__", "This__", "Else__", 
			"Int_", "Var", "Digits", "NL", "String_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mx.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MxParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MxContext extends ParserRuleContext {
		public List<OutfitContext> outfit() {
			return getRuleContexts(OutfitContext.class);
		}
		public OutfitContext outfit(int i) {
			return getRuleContext(OutfitContext.class,i);
		}
		public MxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mx; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterMx(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitMx(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitMx(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MxContext mx() throws RecognitionException {
		MxContext _localctx = new MxContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mx);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool__) | (1L << Int__) | (1L << String__) | (1L << Void__) | (1L << Class__) | (1L << Var))) != 0)) {
				{
				{
				setState(40);
				outfit();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutfitContext extends ParserRuleContext {
		public OutfitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outfit; }
	 
		public OutfitContext() { }
		public void copyFrom(OutfitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Class_assignContext extends OutfitContext {
		public Class_Context class_() {
			return getRuleContext(Class_Context.class,0);
		}
		public Class_assignContext(OutfitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterClass_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitClass_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitClass_assign(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionContext extends OutfitContext {
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public FunctionContext(OutfitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Type_assignContext extends OutfitContext {
		public Type_and_varContext type_and_var() {
			return getRuleContext(Type_and_varContext.class,0);
		}
		public Type_assignContext(OutfitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterType_assign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitType_assign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitType_assign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OutfitContext outfit() throws RecognitionException {
		OutfitContext _localctx = new OutfitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_outfit);
		try {
			setState(51);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new FunctionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				func();
				}
				break;
			case 2:
				_localctx = new Class_assignContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				class_();
				}
				break;
			case 3:
				_localctx = new Type_assignContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				type_and_var();
				setState(49);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_Context extends ParserRuleContext {
		public TerminalNode Class__() { return getToken(MxParser.Class__, 0); }
		public Var_Context var_() {
			return getRuleContext(Var_Context.class,0);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<Type_and_varContext> type_and_var() {
			return getRuleContexts(Type_and_varContext.class);
		}
		public Type_and_varContext type_and_var(int i) {
			return getRuleContext(Type_and_varContext.class,i);
		}
		public List<Self_funcContext> self_func() {
			return getRuleContexts(Self_funcContext.class);
		}
		public Self_funcContext self_func(int i) {
			return getRuleContext(Self_funcContext.class,i);
		}
		public Class_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterClass_(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitClass_(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitClass_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_Context class_() throws RecognitionException {
		Class_Context _localctx = new Class_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(Class__);
			setState(54);
			var_();
			setState(55);
			match(T__1);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool__) | (1L << Int__) | (1L << String__) | (1L << Void__) | (1L << Var))) != 0)) {
				{
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(56);
					func();
					}
					break;
				case 2:
					{
					setState(57);
					type_and_var();
					setState(58);
					match(T__0);
					}
					break;
				case 3:
					{
					setState(60);
					self_func();
					}
					break;
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public Var_Context var_() {
			return getRuleContext(Var_Context.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public List<Type_and_varContext> type_and_var() {
			return getRuleContexts(Type_and_varContext.class);
		}
		public Type_and_varContext type_and_var(int i) {
			return getRuleContext(Type_and_varContext.class,i);
		}
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			type_(0);
			setState(69);
			var_();
			setState(70);
			match(T__3);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool__) | (1L << Int__) | (1L << String__) | (1L << Void__) | (1L << Var))) != 0)) {
				{
				setState(71);
				type_and_var();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(72);
					match(T__4);
					setState(73);
					type_and_var();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(81);
			match(T__5);
			setState(82);
			match(T__1);
			setState(83);
			stat();
			setState(84);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Self_funcContext extends ParserRuleContext {
		public Var_Context var_() {
			return getRuleContext(Var_Context.class,0);
		}
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public List<Type_and_varContext> type_and_var() {
			return getRuleContexts(Type_and_varContext.class);
		}
		public Type_and_varContext type_and_var(int i) {
			return getRuleContext(Type_and_varContext.class,i);
		}
		public Self_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_self_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterSelf_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitSelf_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitSelf_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Self_funcContext self_func() throws RecognitionException {
		Self_funcContext _localctx = new Self_funcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_self_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			var_();
			setState(87);
			match(T__3);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Bool__) | (1L << Int__) | (1L << String__) | (1L << Void__) | (1L << Var))) != 0)) {
				{
				setState(88);
				type_and_var();
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(89);
					match(T__4);
					setState(90);
					type_and_var();
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(98);
			match(T__5);
			setState(99);
			match(T__1);
			setState(100);
			stat();
			setState(101);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public List<SingstatContext> singstat() {
			return getRuleContexts(SingstatContext.class);
		}
		public SingstatContext singstat(int i) {
			return getRuleContext(SingstatContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << True__) | (1L << False__) | (1L << Op2) | (1L << Bool__) | (1L << Int__) | (1L << String__) | (1L << Null__) | (1L << Void__) | (1L << For__) | (1L << If__) | (1L << While__) | (1L << Break__) | (1L << Continue__) | (1L << Return__) | (1L << New__) | (1L << This__) | (1L << Int_) | (1L << Var) | (1L << String_))) != 0)) {
				{
				{
				setState(103);
				singstat();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingstatContext extends ParserRuleContext {
		public SingstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singstat; }
	 
		public SingstatContext() { }
		public void copyFrom(SingstatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class While_stmtContext extends SingstatContext {
		public TerminalNode While__() { return getToken(MxParser.While__, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SingstatContext singstat() {
			return getRuleContext(SingstatContext.class,0);
		}
		public While_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterWhile_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitWhile_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitWhile_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtmixContext extends SingstatContext {
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public StmtmixContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterStmtmix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitStmtmix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitStmtmix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Sing_stmtContext extends SingstatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Sing_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterSing_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitSing_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitSing_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Empty_stmtContext extends SingstatContext {
		public Empty_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterEmpty_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitEmpty_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitEmpty_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Continue_stmtContext extends SingstatContext {
		public TerminalNode Continue__() { return getToken(MxParser.Continue__, 0); }
		public Continue_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterContinue_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitContinue_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitContinue_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class If_stmtContext extends SingstatContext {
		public TerminalNode If__() { return getToken(MxParser.If__, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<SingstatContext> singstat() {
			return getRuleContexts(SingstatContext.class);
		}
		public SingstatContext singstat(int i) {
			return getRuleContext(SingstatContext.class,i);
		}
		public TerminalNode Else__() { return getToken(MxParser.Else__, 0); }
		public If_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterIf_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitIf_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitIf_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Break_stmtContext extends SingstatContext {
		public TerminalNode Break__() { return getToken(MxParser.Break__, 0); }
		public Break_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterBreak_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitBreak_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitBreak_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class For_stmtContext extends SingstatContext {
		public TerminalNode For__() { return getToken(MxParser.For__, 0); }
		public List<For_expr_in_cirContext> for_expr_in_cir() {
			return getRuleContexts(For_expr_in_cirContext.class);
		}
		public For_expr_in_cirContext for_expr_in_cir(int i) {
			return getRuleContext(For_expr_in_cirContext.class,i);
		}
		public SingstatContext singstat() {
			return getRuleContext(SingstatContext.class,0);
		}
		public For_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterFor_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitFor_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitFor_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Assign_stmtContext extends SingstatContext {
		public Type_and_varContext type_and_var() {
			return getRuleContext(Type_and_varContext.class,0);
		}
		public Assign_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterAssign_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitAssign_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitAssign_stmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Return_stmtContext extends SingstatContext {
		public TerminalNode Return__() { return getToken(MxParser.Return__, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Return_stmtContext(SingstatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).enterReturn_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MxListener ) ((MxListener)listener).exitReturn_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MxVisitor ) return ((MxVisitor<? extends T>)visitor).visitReturn_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingstatContext singstat() throws RecognitionException {
		SingstatContext _localctx = new SingstatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_singstat);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				_localctx = new Empty_stmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(T__0);
				}
				break;
			case 2:
				_localctx = new Sing_stmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				expr(0);
				setState(111);
				match(T__0);
				}
				break;
			case 3:
				_localctx = new Assign_stmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				type_and_var();
				setState(114);
				match(T__0);
				}
				break;
			case 4:
				_localctx = new Return_stmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				match(Return__);
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << True__) | (1L << False__) | (1L << Op2) | (1L << Null__) | (1L << Void__) | (1L << New__) | (1L << This__) | (1L << Int_) | (1L << Var) | (1L << String_))) != 0)) {
					{
					{
					setState(117);
					expr(0);
					}
